<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@drawable/gradient_background"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".activity.RegisterActivity">

    <ProgressBar
        android:id="@+id/createAccProgressBarId"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_marginBottom="8dp"/>

    <LinearLayout
        android:id="@+id/acct_login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/curved_background"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingTop="32dp"
            android:paddingBottom="32dp">

        <EditText
            android:id="@+id/usernameAccountEditTextId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username_hint"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:paddingBottom="16dp" />

        <AutoCompleteTextView
            android:id="@+id/emailAccountEditTextId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:maxLines="1" />

        <EditText
            android:id="@+id/passwordAccountEditTextId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:maxLines="1" />
        </LinearLayout>

        <Button
            android:id="@+id/createAcctButtonId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@android:color/transparent"
            android:text="@string/create_text"
            android:textColor="@color/colorAccent"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>